<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">MSBM Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="news">News</string>
    <string name="events">Events</string>
    <string name="courses">Courses</string>
    <string name="directory">Directory</string>
    <string name="classes">Classes</string>
    <string name="research">Research</string>
    <string name="calendar">Calendar</string>
    <string name="bookings">Bookings</string>
    <string name="dining">Dining</string>
    <string name="social">Social</string>
    <string name="map">Map</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_article_thumbnail">News article thumbnail</string>
    <string name="error.message.network">Network error</string>
    <string name="error.message.call">Call failed</string>
    <string name="error.message.map">Map loading failed</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="welcome_images">Welcome images</string>
    <string name="start">Start</string>
    <string name="connect_moodle">Connect Moodle</string>
    <string name="msbm_s_logo">MSBM\'s logo</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="done">Done</string>
    <string name="connect_with_moodle">Connect With Moodle</string>
    <string name="msbsm_logo">MSBMS logo</string>
    <string name="icon_representing_cotent">Icon representing cotent</string>
    <string name="icon_representing_content">Icon representing content</string>
    <string name="icon_that_provides_addition_information_when_clicked">Icon that provides addition information when clicked</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="moodle_connect">Moodle Connect</string>
    <string name="title_activity_new_booking">NewBookingActivity</string>
    <string name="duration">Duration</string>
    <string name="forr">for</string>
    <string name="location">Location</string>
    <string name="start_date">Start Date</string>
    <string name="at">at</string>
    <string name="create_new_booking">Create New Booking</string>
    <string name="time">Time</string>
    <string name="hours">hours</string>
    <string name="create">Create</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_list_article">ListArticleActivity</string>
    <string name="article_headline_image">Article headline image</string>
    <string name="share_icon">Share icon</string>
    <string name="login_screen_background">Login screen background</string>
    <string name="title_activity_social">SocialActivity</string>
    <string name="title_activity_list_dining">Dining</string>
    <string name="home">Home</string>
    <string name="title_activity_about">About</string>
    <string name="about_msbm_title">About MSBM</string>
    <string name="about_msbm_content">
        The Mona School of Business &amp; Management is the premier business school in the
        Caribbean. Our continued focus is on being a solution oriented school of business &amp;
        management which produces professionals and leaders through teaching, research and service.
    </string>
    <string name="about_msbm_mobile_title">About MSBM Mobile</string>
    <string name="about_msbm_mobile_content">
        The MSBM Mobile App is a key element of MSBM\'s digital strategy and seek to exploit the
        capabilities of the mobile channel as a means of engaging with current and prospective
        students, and enhancing student service delivery. MSBM Mobile v1(2015) was developed by UWI students,
        Terecia Anderson, Xavier Bryson, Antonio Fearon, Shane Richards and Kenneth Williams using a hybrid HTML5 and Android build.
        \n\nMSBM Mobile v2(2017) is a fully Native Android application developed by Antonio Fearon.
    </string>
    <string name="about_msbm_tips_title">Helpful Tips</string>
    <string name="about_msbm_tips_content"><b>Courses:</b> \n
You will need to use your Moodle login in order to access the Courses module. You may login to either OurVLE (Undergrad courses) or MSBM-ELS (for most Graduate courses) \n \n
<b>Booking</b>: \n
This module allows you to reserve use of the MSBM Gazebos, Finance Lab and the Media Lab in the Doc Centre. You will need to use your Moodle login in order to create a booking. Bookings can only be made for the current date. Once submitted the reservation is not secured until reviewed and confirmed by the MSBM Librarian. \n \n
<b>Locations</b>: \n
For most effective use of the Locations module, tap the "Locations" button at the top right of the screen beside the Menu icon to see the categorized list of available locations on campus. You can select to display one or all locations from a specific Category. If you tap the "Locate me" button in the bottom right, the map displays your current position in relation to the campus locations, to assist with navigation. \n \n
<b>Directory:</b> \n
The full-text search function allows you to quickly locate a name in the Contact Directory. As you enter letters the listing is reduced until the desired entry is found \n \n

For any additional information or to report a bug, use the Feedback menu option, or contact the MSBM HelpDesk at: \n
\nEmail: msbm-helpdesk@uwimona.edu.jm\n\n
        Telephone: 977-6035 ext. 230 or 362</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="title_activity_list_classes">ListClassesActivity</string>
    <string name="send_booking">Send</string>
    <string name="gazebo_prompt">Duration</string>
    <string-array name="gazebo_time_array">
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>4 Hours</item>
    </string-array>
    <string name="title_activity_bookings_list">Bookings List</string>
    <string name="bookings_nameText">Name:\u0020</string>
    <string name="bookings_startText">Start Time:\u0020</string>
    <string name="bookings_endText">End Time:\u0020</string>
    <string name="bookings_location">Location:\u0020</string>
    <string name="bookings_note1">Bookings has not been made official until the top status bar is Green in color and says \"CONFIRMED\".</string>
    <string name="lectures_room">Room:\u0020</string>
    <string name="lectures_teach">Lecturer:\u0020</string>
    <string name="lectures_time">Time:\u0020</string>
    <string name="lectures_date">Date:\u0020</string>
    <string name="events_room">Venue:\u0020</string>
    <string name="title_activity_booking_details">BookingDetails</string>
    <string name="main_activity_title_bookings">Bookings</string>
    <string name="title_activity_bookings_option">Bookings</string>
    <string name="title_bookings_create">Submit Booking</string>
    <string name="title_bookings_list">Today\'s Booking</string>
    <string name="title_bookings_personal">My Bookings</string>
    <string name="title_directory">Directory</string>
    <string name="title_courses">Courses</string>
    <string name="title_map">Map</string>
    <string name="title_classes">Classes</string>
    <string name="title_events">Events</string>
    <string name="title_imageGallery">Image Gallery</string>
    <string name="title_photos">Images</string>
    <string name="title_news">News</string>
    <string name="title_videos">Videos</string>
    <string name="title_activity_splash_screens">SplashScreensActivity</string>
    <string name="title_activity_directory">DirectoryActivity</string>
    <string name="title_activity_bookings">Bookings</string>
    <string name="title_activity_list_courses">Courses</string>
    <string name="moodle">Moodle</string>
    <string name="title_activity_show_article">ShowArticleActivity</string>
    <string name="title_activity_moodle">Moodle</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_home">Home</string>
    <string name="profile">Profile</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="feedback">Feedback</string>
    <string name="cd_main_image">main image</string>
    <string name="add_my_location">Add My Location</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="anonymous">Anonymous</string>
    <string name="material_icon_account">&#xe800;</string>
    <string name="material_icon_account_multiple">&#xe8dc;</string>
    <string name="material_icon_bookmark">&#xe921;</string>
    <string name="material_icon_bike">&#xe915;</string>
    <string name="material_icon_box_full">&#xe86b;</string>
    <string name="material_icon_clock">&#xe881;</string>
    <string name="material_icon_check">&#xe867;</string>
    <string name="material_icon_checked_full">&#xe86f;</string>
    <string name="material_icon_check_empty">&#xe86a;</string>
    <string name="material_icon_check_full">&#xe86e;</string>
    <string name="material_icon_city">&#xe878;</string>
    <string name="material_icon_cart">&#xe857;</string>
    <string name="material_icon_chevron_down">&#xe874;</string>
    <string name="material_icon_chevron_up">&#xe877;</string>
    <string name="material_icon_date">&#xe848;</string>
    <string name="material_icon_drink">&#xea08;</string>
    <string name="material_icon_dollar">&#xe892;</string>
    <string name="material_icon_email">&#xe99c;</string>
    <string name="material_icon_eat">&#xeac6;</string>
    <string name="material_icon_friends">&#xe8d5;</string>
    <string name="msbm_els">MSBM-ELS</string>
    <string name="ourvle">OurVLE</string>
    <string name="msbm_mona">Mona</string>
    <string name="msbm_wcj">WJC</string>
</resources>