<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_main"
    android:fitsSystemWindows="true"
    tools:context=".activities.general.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/landscape"
            android:contentDescription="@string/login_screen_background"/>

    </RelativeLayout>

    <fr.castorflex.android.circularprogressbar.CircularProgressBar
        android:id="@+id/circular_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        style="@style/CircularThemeProgressBar"/>

    <RelativeLayout
        android:id="@+id/relative_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <LinearLayout
            android:id="@+id/linear_layout_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    style="@style/LoginEditText"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    style="@style/LoginEditText"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radio_group_moodle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_msbm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/msbm_els"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/radio_ourvle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ourvle"/>

                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/button_moodle_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moodle_connect"/>

            <Button
                android:id="@+id/button_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skip"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/linear_layout_form"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/msbsm_logo"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
