<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_media"
    android:gravity="center_horizontal|bottom"
    android:orientation="vertical"
    android:padding="20dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/linear_layout_form"
            android:layout_marginBottom="24dp"
            android:gravity="right|center_vertical"
            android:contentDescription="@string/msbsm_logo"/>

        <!--<com.csform.android.uiapptemplate.font.MaterialDesignIconsTextView-->
            <!--android:id="@+id/logo"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="8dp"-->
            <!--android:layout_weight="0"-->
            <!--android:gravity="right|center_vertical"-->
            <!--android:padding="8dp"-->
            <!--android:text="@string/material_icon_play_square"-->
            <!--android:textColor="@color/material_red_500"-->
            <!--android:textSize="160dp" />-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/login_media_gradient_background"
        android:orientation="vertical"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="text"
                    style="@style/LoginEditText"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <fr.castorflex.android.circularprogressbar.CircularProgressBar
            android:id="@+id/circular_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            style="@style/CircularThemeProgressBar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    style="@style/LoginEditText"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <RadioGroup
                android:id="@+id/radio_group_moodle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="Instance" />

                <RadioButton
                    android:id="@+id/radio_msbm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msbm_els"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_ourvle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ourvle"/>

            </RadioGroup>

            <View
                android:layout_width="1dp"
                android:layout_height="75dp"
                android:background="@color/gray_dark"
                android:paddingTop="80dp"

                android:layout_centerHorizontal="true" />

            <RadioGroup
                android:id="@+id/radio_group_moodleLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:text="Campus" />

                <RadioButton
                    android:id="@+id/radio_mona"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msbm_mona"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/radio_wcj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msbm_wcj"/>

            </RadioGroup>



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="right"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_moodle_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moodle_connect"/>

            <Button
                android:id="@+id/button_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skip"/>

            <!--<com.csform.android.uiapptemplate.font.RobotoTextView-->
                <!--android:id="@+id/login"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@drawable/transparent_button_selector"-->
                <!--android:minHeight="36dp"-->
                <!--android:minWidth="64dp"-->
                <!--android:padding="8dp"-->
                <!--android:text="@string/login"-->
                <!--android:gravity="center"-->
                <!--android:textColor="@android:color/white"-->
                <!--android:textSize="14sp"-->
                <!--app:typeface="robotoMedium" />-->
        </LinearLayout>
    </LinearLayout>

</LinearLayout>